--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Colorlib | Free Bootstrap Website</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
@@ -14,7 +14,7 @@
     <header class="header">
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./logo.webp" alt=""></a>
+          <a class="navbar-brand" href="#"><img src="images/logo.webp" alt=""></a>
           
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -57,10 +57,10 @@
 
     <div class="container text-center flex-wrap">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 ">
-        <div class="col" ><img src="./Img-1.PNG"></div>
-        <div class="col" ><img src="./Img-2.PNG"></div>
-        <div class="col" ><img src="./Img-3.PNG"></div>
-        <div class="col" ><img src="./Img-4.PNG"></div>
+        <div class="col" ><img src="images/Img-5.png"></div>
+        <div class="col" ><img src="images/Img-6.png"></div>
+        <div class="col" ><img src="images/Img-7.png"></div>
+        <div class="col" ><img src="images/Img-8.png"></div>
       </div>
     </div>
     <br>
@@ -68,8 +68,8 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 ">
         <div class="col" ><img src="images/Img-1.png"></div>
         <div class="col" ><img src="images/Img-2.png"></div>
-        <div class="col" ><img src="./Img-7.PNG"></div>
-        <div class="col" ><img src="./Img-8.PNG"></div>
+        <div class="col" ><img src="images/Img-3.png"></div>
+        <div class="col" ><img src="images/Img-4.png"></div>
       </div>
     </div>
     
